# Campaigner

./: .gitignore  README.md  create_json.py  main.py  pyproject.toml  requirements.txt
campaigner/: __main__.py  main.py
campaigner/extras/: convert_base64.py  email.csv  test.csv
