[tool.poetry]
name = "campaigner"
version = "1.0.0"
description = "A Flask API for bulk messaging"
authors = ["Madhurjya Dasgupta <madhurjya2003@icloud.com>"]
license = "Closed"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-jwt-extended = "^4.5.2"
mysql-connector-python = "^8.0.33"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
