
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Madhurjya Dasgupta", email = "madhurjya2003@icloud.com"},
]
dependencies = [
    "flask>=2.2.5",
    "mysql-connector-python>=8.0.33",
    "flask-jwt-extended>=4.5.2",
    "python-dotenv>=0.21.1",
]
requires-python = ">=3.7"
license = {text = "CC BY-NC-ND 4.0"}
